added GET /user/books
